Removi alguns avisos de qualidade